# cobothon_ws

./: README.md
box_location/: CMakeLists.txt  package.xml
factory_simulation/: CMakeLists.txt  package.xml
factory_simulation/config/: box_models_links.yaml  ch2.scene
factory_simulation/launch/: box_text.launch  orion_sim.launch  sim_chapter1.launch  sim_chapter2.launch  spawn_robot.launch
factory_simulation/models/conveyor_belt1/: model.sdf
factory_simulation/models/conveyor_belt2/: model.config  model.sdf
factory_simulation/models/conveyor_belt3/: model.sdf
factory_simulation/models/distance_laser/: model.config  model.sdf
factory_simulation/models/euro_pallet/: model.sdf
factory_simulation/models/laser_range/: model.sdf
factory_simulation/models/lidar/: model.sdf
factory_simulation/models/lidar1/: model.config  model.sdf
factory_simulation/models/lidar2/: model.config  model.sdf
factory_simulation/models/mcfly_sheet/: model.config  model.sdf
factory_simulation/models/mcfly_sheet/materials/scripts/: sheet.material
factory_simulation/models/unit_box/: model.sdf
factory_simulation/models/unit_cylinder/: model.sdf
factory_simulation/scripts/: BoxSpawnerControl.py  ProximitySensorPlugin.cc  box_location_client.py  box_spawner.py  ch1_add_box_collision.py  chapter1_mission.py  chapter2_mission.py  laserControlConveyer.py  yaml_parse.py
factory_simulation/worlds/: factory_chapter1.world  factory_chapter2.world
orion_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_description/: CMakeLists.txt  package.xml
(+49 files in other folders)
